[package]
name = "physics_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64" # For Math.random, Math.PI, console_log etc.
getrandom = { version = "0.2.10", features = ["js"] } # For random numbers
serde = { version = "1.0.188", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
opt-level = "s" # Optimize for size
lto = true
